--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Meshi kanri</title>
+  <!-- <link rel="stylesheet" media="all" href="{{url_for('static', filename='css/style.css')}}"> -->
   <link rel="stylesheet" media="all" href="{{url_for('static', filename='css/form.css')}}">
   <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique:wght@400;500&display=swap"
     rel="stylesheet">
