--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Meshi aruka?</title>
-  <link rel="stylesheet" media="all" href="css/style.css">link rel="stylesheet" media="all" href="css/style.css">
+  <link rel="stylesheet" media="all" href="{{url_for('static', filename='css/style.css')}}">
   <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique:wght@400;500&display=swap"
     rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
